fix spacing-unit / warning

--- a/_sass/sencilla/_base.scss
+++ b/_sass/sencilla/_base.scss
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
 }
 
 
@@ -134,8 +134,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 hr {
-  margin-top: $spacing-unit / 2;
-  margin-bottom: $spacing-unit / 2;
+  margin-top: calc($spacing-unit / 2);
+  margin-bottom: calc($spacing-unit / 2);
   height: 2px;
   border-width: 0px;
   color: $stroke;
@@ -169,9 +169,9 @@ a {
  */
 blockquote {
   color: $text-dark;
-  margin-left: $spacing-unit / 2;
+  margin-left: calc($spacing-unit / 2);
   border-left: 6px solid $stroke;
-  padding: $spacing-unit / 2;
+  padding: calc($spacing-unit / 2);
   @include relative-font-size(1.25);
   font-style: italic;
   
@@ -225,8 +225,8 @@ pre {
   @include media-query($on-palm) {
     max-width: -webkit-calc(#{$content-width});
     max-width:         calc(#{$content-width});
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
   }
 }
 
@@ -288,7 +288,7 @@ table {
   }
 
   th, td {
-    padding: ($spacing-unit / 3) ($spacing-unit / 2);
+    padding: (calc($spacing-unit / 3)) (calc($spacing-unit / 2));
     border-collapse: collapse;
     border-right: 1px solid $stroke;
     &:last-child {
