--- a/_sass/sencilla/_layout.scss
+++ b/_sass/sencilla/_layout.scss
@@ -136,7 +136,7 @@
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
-    right: $spacing-unit / 2;
+    right: calc($spacing-unit / 2);
     background-color: $nav-bg;
     border: 1px solid $stroke;
     border-radius: 5px;
@@ -255,10 +255,10 @@
   border-radius: 8px;
   box-shadow: $shadow-body;
   height: auto;
-  padding-top: $spacing-unit / 2;
-  padding-bottom: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-  padding-right: $spacing-unit / 2;
+  padding-top: calc($spacing-unit / 2);
+  padding-bottom: calc($spacing-unit / 2);
+  padding-left: calc($spacing-unit / 2);
+  padding-right: calc($spacing-unit / 2);
   margin-left: auto;
   margin-right: auto;
   background-color: $box-fill;
@@ -289,10 +289,10 @@
   border-radius: 8px;
   //box-shadow: $shadow-body;
   height: auto;
-  padding-top: $spacing-unit / 2;
-  padding-bottom: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-  padding-right: $spacing-unit / 2;
+  padding-top: calc($spacing-unit / 2);
+  padding-bottom: calc($spacing-unit / 2);
+  padding-left: calc($spacing-unit / 2);
+  padding-right: calc($spacing-unit / 2);
   margin-left: auto;
   margin-right: auto;
   font-size: $small-font-size;
@@ -324,8 +324,8 @@
   height: auto;
   padding-top: $spacing-unit;
   padding-bottom: $spacing-unit;
-  padding-left: $spacing-unit / 2;
-  padding-right: $spacing-unit / 2;
+  padding-left: calc($spacing-unit / 2);
+  padding-right: calc($spacing-unit / 2);
   font-size: $small-font-size;
   background-color: $box-fill;
 }
@@ -408,8 +408,8 @@
  border-radius: 8px;
  border-width: 2px;
  height: auto;
-// padding-top: $spacing-unit / 2;
-// padding-bottom: $spacing-unit / 2;
+// padding-top: calc($spacing-unit / 2);
+// padding-bottom: calc($spacing-unit / 2);
 // padding-left: $spacing-unit;
 // padding-right: $spacing-unit;
  margin-left: auto;
@@ -597,7 +597,7 @@
       display: inline-block;
       background-color: $grey85;
       max-width: 300px;
-      padding: $spacing-unit / 2;
+      padding: calc($spacing-unit / 2);
       text-decoration: none;
       box-shadow: $shadow;
       color: $text-light;
@@ -623,7 +623,7 @@
   .tag-entry {
     margin-top: $spacing-unit ;
     margin-bottom: $spacing-unit ;
-    margin-left: $spacing-unit / 2;
+    margin-left: calc($spacing-unit / 2);
     /*margin: 0 0 0.9375rem 1.5625rem;*/
     .entry-date {
       color: $text;
